--- a/Agri_Website/package.json
+++ b/Agri_Website/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.4",
+    "axois": "^0.0.1-security",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
